<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserProfileFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="68dp"
        android:text="@string/email_tag"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_example"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <LinearLayout
        android:id="@+id/passwordForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/changePassword">

        <TextView
            android:id="@+id/crisisNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_old_password_tag"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/enter_password"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password_tag"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/enter_password"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/passwordRequirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_reqs"
            android:textColor="@color/primary"
            android:textSize="12sp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/submitPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>