...
                representation or warranty that they are fit for this purpose. The App licensee should not
                delay in obtaining such intervention as a result of usage.\n\n
    </string>
    <!--Nav bar strings-->
    <string name="activities">Activities</string>
    <string name="add_mood">Add mood</string>
    <string name="home">Home</string>
    <string name="resources">Resources</string>
    <string name="account">Account</string>
    <string name="tutorial">Tutorial</string>
    <!--Account page strings-->
    <string name="email_example">exampleuser@feelgood.com</string>
    <string name="email_tag">Email:</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password_tag">Enter New Password:</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">Submit</string>

    <string name="activity_image">Activity Image</string>
    <!--Breathing activity strings-->
    <string name="breathe_in">Breathe in</string>
    <string name="breathe_out">Breathe out</string>
    <string name="congratulations">Congratulations, you have finished this activity!</string>
...
